# texasTrail

./: .gitignore  CMakeLists.txt  Color.cc  Color.h  Colors.h  Date.cc  Date.h  DialoguePrompt.cc  DialoguePrompt.h  Enums.cc  Enums.h  Formatting.cc  Formatting.h  IntPrompt.cc  IntPrompt.h  LICENSE  Log.cc  Log.h  Main.cc  Party.cc  Party.h  Person.cc  Person.h  PersonGenerator.cc  PersonGenerator.h  Resource.cc  Resource.h  Resources.cc  Resources.h  Settings.cc  Settings.h  Shop.cc  Shop.h  StringPrompt.cc  StringPrompt.h  TablePrompt.cc  TablePrompt.h  TexasTrail.cc  TexasTrail.h  UI.cc  (+20 more)
event/: Event.cc  Event.h  EventDeath.cc  EventDeath.h  EventDisease.cc  EventDisease.h  EventDiseaseCured.cc  EventDiseaseCured.h  EventGeneric.cc  EventGeneric.h
hazard/: DiseaseFactory.cc  DiseaseFactory.h  Diseases.cc  Diseases.h  Hazard.h  HazardDisease.cc  HazardDisease.h  HazardWagonFire.cc  HazardWagonFire.h  Hazards.cc  Hazards.h
inventory/: Inventory.cc  Inventory.h  Item.cc  Item.h  ItemFood.cc  ItemFood.h  ItemMedicine.cc  ItemMedicine.h  Items.cc  Items.h  Stack.cc  Stack.h
party/: Effect.cc  Effect.h  EffectBrokenLeg.cc  EffectBrokenLeg.h  EffectDisease.cc  EffectDisease.h  ICargo.h  Immunity.cc  Immunity.h  Party.cc  Party.h  Person.cc  Person.h  Stats.h  Wagon.cc  Wagon.h
render/: CanvasElement.cc  CanvasElement.h  Panel.cc  Panel.h  Window.cc  Window.h
shape/: Circle.cc  Circle.h  Point.h  Segment.cc  Segment.h
ui/: UI.cc  UI.h  UICity.cc  UICity.h  UICommons.cc  UIFork.cc  UIFork.h  UIGoal.cc  UIInventory.cc  UIInventory.h  UIShop.cc  UIShop.h  UITravel.cc  (+5 more)
(+21 files in other folders)
